[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
crypto-hash = "0.3.4"
csv = "1.2.1"
glob = "0.3.1"
num_cpus = "1.15.0"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
stopwatch = "0.0.7"
threadpool = "1.8.1"
